[project]
name = "owasp-mcp"
version = "0.1.0"
description = "MCP server for unified OWASP project search — covers all 418+ projects including Flagship, Production, Lab, and Incubator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
owasp-mcp = "owasp_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/owasp_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

