[project]
name = "security-framework-mcp"
version = "0.2.0"
description = "MCP server for unified OWASP + NIST security framework access — 24 tools, 1099+ data points, live NVD, threat modeling, compliance mapping"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
security-framework-mcp = "security_framework_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/security_framework_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
